tests/inputs/invalid/map-06.js
const map = [
    ['','','','','','x','-','B'],
    ['','','','','','','','|'],
    ['@','-','-','A','-','-','-','+'],
    ['','','','','','','','|'],
    ['','','T','+','','','','C'],
    ['','','','|','','','','|'],
    ['','','','+','-','-','-','|']
];

module.exports = map;
